a few modifs & a lolcat

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 					<section data-background="img/workshop/mission-impossible.jpg">
 
 					</section>
+
+					<section>
+						<img src="img/workshop/lolcat.jpg" width="700" height="600">
+					</section>
 				</section>
 
 				<section>
@@ -114,7 +118,7 @@
 						<h2>Core stack</h2>
 						<ul>
 							<li class="fragment">HTML5 + CSS3 + JavaScript + AngularJS</li>
-							<li class="fragment">Scala + Play! Framework</li>
+							<li class="fragment">Scala 2.10.2 + Play! Framework 2.2.0</li>
 							<li class="fragment">MongoDB</li>
 						</ul>
 					</section>
@@ -129,7 +133,8 @@
 
 					<section>
 						<h2>Autosource</h2>
-						<p>CRUD made easy</p>
+						<p>REST/CRUD made easy</p>
+						<p><i>Previewing 2.0-SNAPSHOT</i></p>
 						<p>
 							<a href="https://github.com/mandubian/play-autosource">https://github.com/mandubian/play-autosource</a>
 						</p>
@@ -138,6 +143,7 @@
 					<section>
 						<h2>ActorRoom</h2>
 						<p>Actors and Websocket made easy</p>
+						<p><i>Previewing v0.2</i></p>
 						<p>
 							<a href="https://github.com/mandubian/play-actor-room">https://github.com/mandubian/play-actor-room</a>
 						</p>
