Add sponsors and event

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 					</section>
 					<section>
 						<p>
+							<small>Zenexity becomes</small>
+						</p>
+						<p>
 							<img src="img/theme/zengularity/logo.png" alt="Zengularity Logo" class="unstyled logo">
 							<span class="red upper logo">Zengularity</span>
 						</p>
@@ -73,14 +76,28 @@
 							<br/>
 							<span class="upper">for transforming business</span>
 						</p>
-						<p>
-							<small>(ex-Zenexity)</small>
-						</p>
 					</section>
 
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
+				</section>
+
+				<section>
+					<h2>Sponsors</h2>
+
+					<table class="sponsors">
+						<tbody>
+							<tr>
+								<td><img src="img/workshop/logo-xebia.png" alt="Xebia"></td>
+								<td><img src="img/workshop/logo-axa.png" alt="Axa"></td>
+							</tr>
+							<tr>
+								<td><img src="img/workshop/logo-ebiz.png" alt="Ebiz"></td>
+								<td><img src="img/workshop/logo-ebiznext.png" alt="Ebiznext"></td>
+							</tr>
+						</tbody>
+					</table>
 				</section>
 
 				<section>
@@ -235,14 +252,18 @@ mongo --version
 					<section>
 						<h2>Step-by-step</h2>
 						<ol>
-							<li>Choose a way to bootstrap</li>
-							<li>Bootstrap</li>
-							<li>CRUD auctions</li>
-							<li>[Optional] Angularize the project</li>
-							<li>Realtime Websocket</li>
-							<li>Auto-complete finished auction</li>
+							<li class="fragment">Choose a way to bootstrap</li>
+							<li class="fragment">Bootstrap</li>
+							<li class="fragment">CRUD auctions</li>
+							<li class="fragment">[Optional] Angularize the project</li>
+							<li class="fragment">Realtime Websocket</li>
+							<li class="fragment">Auto-complete finished auction</li>
 						</ol>
 					</section>
+				</section>
+
+				<section>
+					<img src="img/workshop/invite-en.jpg" alt="Event">
 				</section>
 
 				<section class="red" data-background="img/theme/zengularity/bg_red.jpg">
