--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="slides">
 				<section>
 					<h1>Buy me!</h1>
-					<h3>Bootstraping application made easy</h3>
+					<h3>Bootstrapping application made easy</h3>
 				</section>
 
 				<section>
@@ -77,10 +77,6 @@
 							<span class="upper">for transforming business</span>
 						</p>
 					</section>
-
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
 				</section>
 
 				<section>
